--- a/00-theorie/08.md
+++ b/00-theorie/08.md
@@ -86,3 +86,31 @@ Dans cet exemple, les méthodes `saveProduct` et `deleteProduct` utilisent les m
 Spring Data JPA simplifie grandement l'interaction avec les bases de données en permettant de créer des méthodes de requêtes par convention de nommage et en fournissant des méthodes CRUD standard par défaut. Vous déclarez les méthodes spécifiques dans les interfaces `Repository`, et Spring Data JPA se charge du reste. Les méthodes courantes comme `save`, `findById`, et `delete` sont déjà fournies et peuvent être utilisées immédiatement.
 
 En utilisant Spring Data JPA, vous réduisez le besoin d'écrire des requêtes SQL manuelles, tout en bénéficiant d'une abstraction puissante pour accéder à vos données.
+
+# Annexe : 
+
+Je vous présente table illustrant les méthodes que vous n'avez pas besoin de déclarer dans le repository, celles que vous devez déclarer avec une convention de nommage, et celles que vous pouvez déclarer en utilisant des requêtes JPQL.
+
+| **Catégorie**                  | **Méthode**                                                    | **Description**                                                                                   | **Déclaration Requise**                |
+|--------------------------------|---------------------------------------------------------------|---------------------------------------------------------------------------------------------------|----------------------------------------|
+| **Méthodes standards (pas besoin de les déclarer)** | `save(S entity)`                                               | Enregistre ou met à jour une entité.                                                               | Non (Fournie par `JpaRepository`)      |
+|                                | `findById(ID id)`                                             | Trouve une entité par son identifiant.                                                             | Non (Fournie par `JpaRepository`)      |
+|                                | `findAll()`                                                   | Récupère toutes les entités.                                                                       | Non (Fournie par `JpaRepository`)      |
+|                                | `deleteById(ID id)`                                           | Supprime une entité par son identifiant.                                                           | Non (Fournie par `JpaRepository`)      |
+|                                | `count()`                                                     | Compte le nombre total d'entités.                                                                  | Non (Fournie par `JpaRepository`)      |
+| **Méthodes basées sur les conventions de nommage** | `findByName(String name)`                                      | Trouve les entités par le nom.                                                                     | Oui (À déclarer dans le repository)    |
+|                                | `findByAgeLessThan(int age)`                                  | Trouve les entités où l'âge est inférieur à une certaine valeur.                                   | Oui (À déclarer dans le repository)    |
+|                                | `findByLastnameAndFirstname(String lastname, String firstname)` | Trouve les entités par le nom de famille et le prénom.                                             | Oui (À déclarer dans le repository)    |
+|                                | `findByStartDateBetween(Date startDate, Date endDate)`        | Trouve les entités dont la date de début se situe entre deux dates données.                        | Oui (À déclarer dans le repository)    |
+| **Méthodes personnalisées (JPQL)** | `@Query("SELECT p FROM Product p WHERE p.name = ?1")`        | Requête JPQL pour trouver les entités `Product` par le nom.                                        | Oui (À déclarer avec `@Query`)         |
+|                                | `@Query("SELECT u FROM User u WHERE u.age > ?1")`             | Requête JPQL pour trouver les utilisateurs dont l'âge est supérieur à une certaine valeur.         | Oui (À déclarer avec `@Query`)         |
+|                                | `@Query("SELECT p FROM Product p WHERE p.price < :price")`    | Requête JPQL pour trouver les produits dont le prix est inférieur à une valeur donnée.             | Oui (À déclarer avec `@Query`)         |
+|                                | `@Query(value = "SELECT * FROM produit WHERE cout = :cout", nativeQuery = true)` | Requête SQL native pour trouver les produits par le coût.                                           | Oui (À déclarer avec `@Query`)         |
+
+### Explication:
+
+- **Méthodes standards** : Ces méthodes sont fournies par défaut par `JpaRepository` ou `CrudRepository`. Vous pouvez les utiliser sans les redéclarer.
+  
+- **Méthodes basées sur les conventions de nommage** : Ces méthodes doivent être déclarées dans votre interface `Repository`. Spring Data JPA génère automatiquement l'implémentation de ces méthodes en fonction des conventions de nommage.
+
+- **Méthodes personnalisées (JPQL)** : Pour des requêtes plus spécifiques ou complexes qui ne peuvent pas être couvertes par les conventions de nommage, vous devez déclarer ces méthodes en utilisant l'annotation `@Query` et en écrivant votre propre requête JPQL ou SQL native.
