--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
@@ -1,12 +1,32 @@
-### 🏁 Partie : Tests avec JSON
-
-Dans cette section, vous allez tester l'application Spring Boot en utilisant des requêtes HTTP pour gérer les comptes associés aux clients. Vous allez utiliser Postman ou un autre outil similaire pour envoyer les requêtes POST, GET, PUT, et DELETE. Voici les étapes et les exemples de JSON à utiliser pour chaque opération.
+Voici la version corrigée avec la numérotation et les instructions claires :
 
 ---
 
+### 🏁 Partie : Tests avec JSON
+
+Dans cette section, vous allez tester l'application Spring Boot en utilisant des requêtes HTTP pour gérer les comptes associés aux clients. Vous utiliserez Swagger pour envoyer des requêtes POST, GET, PUT, et DELETE.
+
+### Étapes avec Swagger :
+
+1. **Accédez à l'interface Swagger** :
+   - Ouvrez votre navigateur et accédez à l'URL de votre application : `http://localhost:8080/swagger-ui.html`.
+
+2. **Suppression de tous les comptes** :
+   - Recherchez la section **`accounts-controller`** dans l'interface Swagger.
+   - Localisez l'endpoint `DELETE /deleteAllAccounts` qui est destiné à supprimer tous les comptes.
+   - Cliquez sur cette opération pour l'ouvrir.
+   - Cliquez ensuite sur le bouton **`Try it out`**.
+   - Enfin, cliquez sur **`Execute`** pour envoyer la requête de suppression de tous les comptes.
+
+3. **Vérification de la suppression** :
+   - Toujours dans la section **`accounts-controller`**, localisez l'endpoint `GET /accounts` pour récupérer la liste de tous les comptes.
+   - Cliquez sur cette opération pour l'ouvrir.
+   - Cliquez sur **`Try it out`** puis sur **`Execute`**.
+   - La réponse devrait être vide si tous les comptes ont bien été supprimés.
+
 ### 1️⃣ Insertion des Comptes via HTTP (POST) ➕
 
-Après avoir inséré les clients dans la base de données, vous pouvez commencer à créer les comptes associés via des requêtes POST.
+Après avoir supprimé tous les comptes, vous pouvez commencer à créer de nouveaux comptes associés via des requêtes POST.
 
 Voici les JSON à copier-coller pour créer les comptes :
 
@@ -269,7 +289,9 @@ Voici les URLs à utiliser pour supprimer chaque compte :
   - Supprimer Compte 22 : `http://localhost:8080/deleteAccount/22`
 
 - **Client 3 :**
-  - Supprimer Compte 3 : `http://localhost:8080/deleteAccount/3`
+  - Supprimer Compte 3 : `http://localhost:8080
+
+/deleteAccount/3`
   - Supprimer Compte 13 : `http://localhost:8080/deleteAccount/13`
   - Supprimer Compte 23 : `http://localhost:8080/deleteAccount/23`
 
@@ -282,11 +304,11 @@ Voici les URLs à utiliser pour supprimer chaque compte :
 
 ### 🛠️ Test et Vérification
 
-### 1️⃣ Vérification via GET
-- **Vérifiez les résultats en utilisant l'URL `http://localhost:8080/accounts` ou via un GET dans POSTMAN sur `http://localhost:8080/accounts`**.
+1. **Vérification via GET**
+   - **Vérifiez les résultats en utilisant l'URL `http://localhost:8080/accounts` ou via un GET dans Postman sur `http://localhost:8080/accounts`.**
 
-### 2️⃣ Continuer à tester les différentes fonctionnalités en fonction des opérations précédentes.
+2. **Continuez à tester les différentes fonctionnalités en fonction des opérations précédentes.**
 
---- 
+---
 
 Avec cette série de tests, vous devriez être capable de valider les différentes fonctionnalités de gestion des comptes bancaires pour vos clients.
