--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
@@ -1,8 +1,4 @@
-Voici la version corrigée avec la numérotation et les instructions claires :
-
----
-
-### 🏁 Partie : Tests avec JSON
+# 🏁 Partie : Tests avec JSON
 
 Dans cette section, vous allez tester l'application Spring Boot en utilisant des requêtes HTTP pour gérer les comptes associés aux clients. Vous utiliserez Swagger pour envoyer des requêtes POST, GET, PUT, et DELETE.
 
