--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
@@ -14,11 +14,19 @@ Dans cette section, vous allez tester l'application Spring Boot en utilisant des
    - Cliquez ensuite sur le bouton **`Try it out`**.
    - Enfin, cliquez sur **`Execute`** pour envoyer la requête de suppression de tous les comptes.
 
-3. **Vérification de la suppression** :
+3. **Vérification de la suppression de tous les comptes** :
    - Toujours dans la section **`accounts-controller`**, localisez l'endpoint `GET /accounts` pour récupérer la liste de tous les comptes.
    - Cliquez sur cette opération pour l'ouvrir.
    - Cliquez sur **`Try it out`** puis sur **`Execute`**.
    - La réponse devrait être vide si tous les comptes ont bien été supprimés.
+
+4. **Vérification de tous les clients** :
+   - Recherchez la section **`customers-controller`** dans l'interface Swagger.
+   - Localisez l'endpoint `GET /customers` pour récupérer la liste de tous les clients.
+   - Cliquez sur cette opération pour l'ouvrir.
+   - Cliquez sur **`Try it out`** puis sur **`Execute`** pour voir la liste des clients existants.
+
+---
 
 ### 1️⃣ Insertion des Comptes via HTTP (POST) ➕
 
@@ -277,7 +285,9 @@ Voici les URLs à utiliser pour supprimer chaque compte :
 - **Client 1 :**
   - Supprimer Compte 1 : `http://localhost:8080/deleteAccount/1`
   - Supprimer Compte 11 : `http://localhost:8080/deleteAccount/11`
-  - Supprimer Compte 21 : `http://localhost:8080/deleteAccount/21`
+  - Supprimer Compte 21 : `http
+
+://localhost:8080/deleteAccount/21`
 
 - **Client 2 :**
   - Supprimer Compte 2 : `http://localhost:8080/deleteAccount/2`
@@ -285,9 +295,7 @@ Voici les URLs à utiliser pour supprimer chaque compte :
   - Supprimer Compte 22 : `http://localhost:8080/deleteAccount/22`
 
 - **Client 3 :**
-  - Supprimer Compte 3 : `http://localhost:8080
-
-/deleteAccount/3`
+  - Supprimer Compte 3 : `http://localhost:8080/deleteAccount/3`
   - Supprimer Compte 13 : `http://localhost:8080/deleteAccount/13`
   - Supprimer Compte 23 : `http://localhost:8080/deleteAccount/23`
 
@@ -303,7 +311,10 @@ Voici les URLs à utiliser pour supprimer chaque compte :
 1. **Vérification via GET**
    - **Vérifiez les résultats en utilisant l'URL `http://localhost:8080/accounts` ou via un GET dans Postman sur `http://localhost:8080/accounts`.**
 
-2. **Continuez à tester les différentes fonctionnalités en fonction des opérations précédentes.**
+2. **Vérification de tous les clients**
+   - **Utilisez l'URL `http://localhost:8080/customers` ou effectuez un GET dans Postman sur `http://localhost:8080/customers` pour voir la liste des clients.**
+
+3. **Continuez à tester les différentes fonctionnalités en fonction des opérations précédentes.**
 
 ---
 
