--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
@@ -8,29 +8,29 @@ Dans cette section, vous allez tester l'application Spring Boot en utilisant des
    - Ouvrez votre navigateur et accédez à l'URL de votre application : `http://localhost:8080/swagger-ui.html`.
 
 2. **Suppression de tous les comptes** :
-   - Recherchez la section **`accounts-controller`** dans l'interface Swagger.
-   - Localisez l'endpoint `DELETE /deleteAllAccounts` qui est destiné à supprimer tous les comptes.
-   - Cliquez sur cette opération pour l'ouvrir.
-   - Cliquez ensuite sur le bouton **`Try it out`**.
-   - Enfin, cliquez sur **`Execute`** pour envoyer la requête de suppression de tous les comptes.
+   - **Section** : `accounts-controller`
+   - **Endpoint** : `DELETE /deleteAllAccounts`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez ensuite sur le bouton **`Try it out`** et enfin sur **`Execute`** pour envoyer la requête de suppression de tous les comptes.
 
 3. **Vérification de la suppression de tous les comptes** :
-   - Toujours dans la section **`accounts-controller`**, localisez l'endpoint `GET /accounts` pour récupérer la liste de tous les comptes.
-   - Cliquez sur cette opération pour l'ouvrir.
-   - Cliquez sur **`Try it out`** puis sur **`Execute`**.
-   - La réponse devrait être vide si tous les comptes ont bien été supprimés.
+   - **Section** : `accounts-controller`
+   - **Endpoint** : `GET /accounts`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`** puis sur **`Execute`**. La réponse devrait être vide si tous les comptes ont bien été supprimés.
 
 4. **Vérification de tous les clients** :
-   - Recherchez la section **`customers-controller`** dans l'interface Swagger.
-   - Localisez l'endpoint `GET /customers` pour récupérer la liste de tous les clients.
-   - Cliquez sur cette opération pour l'ouvrir.
-   - Cliquez sur **`Try it out`** puis sur **`Execute`** pour voir la liste des clients existants.
+   - **Section** : `customers-controller`
+   - **Endpoint** : `GET /customers`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`** puis sur **`Execute`** pour voir la liste des clients existants.
 
 ---
 
 ### 1️⃣ Insertion des Comptes via HTTP (POST) ➕
 
 Après avoir supprimé tous les comptes, vous pouvez commencer à créer de nouveaux comptes associés via des requêtes POST.
+
+- **Section** : `accounts-controller`
+- **Endpoint** : `POST /newAccount`
+- **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`**. Dans la section **Body**, choisissez `application/json` et collez le JSON correspondant pour créer un compte. Cliquez sur **`Execute`** pour envoyer la requête.
 
 Voici les JSON à copier-coller pour créer les comptes :
 
@@ -156,6 +156,10 @@ Voici les JSON à copier-coller pour créer les comptes :
 
 Après avoir créé les comptes, vous pouvez modifier les détails de ces comptes en utilisant des requêtes PUT.
 
+- **Section** : `accounts-controller`
+- **Endpoint** : `PUT /update/{id}`
+- **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`**. Dans la section **Body**, choisissez `application/json` et collez le JSON correspondant pour modifier un compte. Cliquez sur **`Execute`** pour envoyer la requête.
+
 Voici les JSON à copier-coller pour modifier les comptes :
 
 - **Client 1 :**
@@ -270,7 +274,9 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "customerId": 4,
     "accountType": "Current",
     "branchAddress": "987 Birch Rd",
-    "createDt": "2023-02-04"
+    "createDt": "2023-02-
+
+04"
   }
   ```
 
@@ -280,14 +286,16 @@ Voici les JSON à copier-coller pour modifier les comptes :
 
 Enfin, vous pouvez supprimer les comptes en utilisant des requêtes DELETE.
 
+- **Section** : `accounts-controller`
+- **Endpoint** : `DELETE /deleteAccount/{id}`
+- **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`**. Dans la section **Parameters**, entrez l'ID du compte à supprimer (par exemple, `1` pour le compte avec accountNumber 1). Cliquez sur **`Execute`** pour envoyer la requête.
+
 Voici les URLs à utiliser pour supprimer chaque compte :
 
 - **Client 1 :**
   - Supprimer Compte 1 : `http://localhost:8080/deleteAccount/1`
   - Supprimer Compte 11 : `http://localhost:8080/deleteAccount/11`
-  - Supprimer Compte 21 : `http
-
-://localhost:8080/deleteAccount/21`
+  - Supprimer Compte 21 : `http://localhost:8080/deleteAccount/21`
 
 - **Client 2 :**
   - Supprimer Compte 2 : `http://localhost:8080/deleteAccount/2`
@@ -309,13 +317,17 @@ Voici les URLs à utiliser pour supprimer chaque compte :
 ### 🛠️ Test et Vérification
 
 1. **Vérification via GET**
-   - **Vérifiez les résultats en utilisant l'URL `http://localhost:8080/accounts` ou via un GET dans Postman sur `http://localhost:8080/accounts`.**
+   - **Section** : `accounts-controller`
+   - **Endpoint** : `GET /accounts`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`** puis sur **`Execute`** pour vérifier si les comptes ont été ajoutés ou supprimés correctement.
 
 2. **Vérification de tous les clients**
-   - **Utilisez l'URL `http://localhost:8080/customers` ou effectuez un GET dans Postman sur `http://localhost:8080/customers` pour voir la liste des clients.**
+   - **Section** : `customers-controller`
+   - **Endpoint** : `GET /customers`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`** puis sur **`Execute`** pour voir la liste des clients et vérifier les associations avec les comptes.
 
 3. **Continuez à tester les différentes fonctionnalités en fonction des opérations précédentes.**
 
 ---
 
-Avec cette série de tests, vous devriez être capable de valider les différentes fonctionnalités de gestion des comptes bancaires pour vos clients.
+Avec cette série de tests et les détails sur l'utilisation de Swagger, vous devriez être capable de valider les différentes fonctionnalités de gestion des comptes bancaires pour vos clients.
