--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
@@ -63,6 +63,17 @@ Voici les JSON à copier-coller pour créer les comptes :
   }
   ```
 
+---
+# Vérification: 
+---
+
+ **Vérification de l'ajout de tous les comptes du client #1** :
+   - **Section** : `accounts-controller`
+   - **Endpoint** : `GET /accounts`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`** puis sur **`Execute`**. La réponse devrait être vide si tous les comptes ont bien été supprimés.
+
+
+
 - **Client 2 :**
   ```json
   {
@@ -91,6 +102,18 @@ Voici les JSON à copier-coller pour créer les comptes :
     "createDt": "2023-01-03"
   }
   ```
+
+---
+# Vérification: 
+---
+
+ **Vérification de l'ajout de tous les comptes du client #2** :
+   - **Section** : `accounts-controller`
+   - **Endpoint** : `GET /accounts`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`** puis sur **`Execute`**. La réponse devrait être vide si tous les comptes ont bien été supprimés.
+
+
+
 
 - **Client 3 :**
   ```json
@@ -121,6 +144,19 @@ Voici les JSON à copier-coller pour créer les comptes :
   }
   ```
 
+
+---
+# Vérification: 
+---
+
+ **Vérification de l'ajout de tous les comptes du client #3** :
+   - **Section** : `accounts-controller`
+   - **Endpoint** : `GET /accounts`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`** puis sur **`Execute`**. La réponse devrait être vide si tous les comptes ont bien été supprimés.
+
+
+  
+
 - **Client 4 :**
   ```json
   {
@@ -149,6 +185,18 @@ Voici les JSON à copier-coller pour créer les comptes :
     "createDt": "2023-01-05"
   }
   ```
+
+
+---
+# Vérification: 
+---
+
+ **Vérification de l'ajout de tous les comptes du client #4 et tous les clients** :
+   - **Section** : `accounts-controller`
+   - **Endpoint** : `GET /accounts`
+   - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`** puis sur **`Execute`**. La réponse devrait être vide si tous les comptes ont bien été supprimés.
+
+
 
 ---
 
