--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
@@ -209,6 +209,7 @@ Voici les JSON à copier-coller pour créer les comptes :
 
 ---
 
+
 ### 2️⃣ Modifications des Comptes via HTTP (PUT) ✏️
 
 ---
@@ -219,9 +220,16 @@ Après avoir créé les comptes, vous pouvez modifier les détails de ces compte
 - **Endpoint** : `PUT /update/{id}`
 - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`**. Dans la section **Body**, choisissez `application/json` et collez le JSON correspondant pour modifier un compte. Cliquez sur **`Execute`** pour envoyer la requête.
 
-Voici les JSON à copier-coller pour modifier les comptes :
+---
 
-- **Client 1 :**
+#### **Client 1 :**
+
+2.1. Allez à : **Endpoint** : `GET /myAccount/1`  
+2.2. Vérifiez le paramètre ==> `"accountType": "Checking"`  
+2.3. Modifiez le compte avec : **Endpoint** : `PUT /update/1`
+
+Voici le JSON à copier-coller pour modifier le compte 1 :
+
   ```json
   {
     "accountNumber": 1,
@@ -231,6 +239,18 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "createDt": "2023-02-01"
   }
   ```
+
+2.4. Allez à : **Endpoint** : `GET /myAccount/1`  
+2.5. Vérifiez le paramètre ==> `"accountType": "Savings"`
+
+---
+
+2.6. Allez à : **Endpoint** : `GET /myAccount/11`  
+2.7. Vérifiez le paramètre ==> `"accountType": ".........."`  
+2.8. Modifiez le compte avec : **Endpoint** : `PUT /update/11`
+
+Voici le JSON à copier-coller pour modifier le compte 11 :
+
   ```json
   {
     "accountNumber": 11,
@@ -240,6 +260,18 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "createDt": "2023-02-01"
   }
   ```
+
+2.9. Allez à : **Endpoint** : `GET /myAccount/11`  
+2.10. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+2.11. Allez à : **Endpoint** : `GET /myAccount/21`  
+2.12. Vérifiez le paramètre ==> `"accountType": ".........."`    
+2.13. Modifiez le compte avec : **Endpoint** : `PUT /update/21`
+
+Voici le JSON à copier-coller pour modifier le compte 21 :
+
   ```json
   {
     "accountNumber": 21,
@@ -250,7 +282,19 @@ Voici les JSON à copier-coller pour modifier les comptes :
   }
   ```
 
-- **Client 2 :**
+2.14. Allez à : **Endpoint** : `GET /myAccount/21`  
+2.15. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+#### **Client 2 :**
+
+2.16. Allez à : **Endpoint** : `GET /myAccount/2`  
+2.17. Vérifiez le paramètre ==> `"accountType": "........."`  
+2.18. Modifiez le compte avec : **Endpoint** : `PUT /update/2`
+
+Voici le JSON à copier-coller pour modifier le compte 2 :
+
   ```json
   {
     "accountNumber": 2,
@@ -260,6 +304,18 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "createDt": "2023-02-02"
   }
   ```
+
+2.19. Allez à : **Endpoint** : `GET /myAccount/2`  
+2.20. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+2.21. Allez à : **Endpoint** : `GET /myAccount/12`  
+2.22. Vérifiez le paramètre ==> `"accountType": ".........."`   
+2.23. Modifiez le compte avec : **Endpoint** : `PUT /update/12`
+
+Voici le JSON à copier-coller pour modifier le compte 12 :
+
   ```json
   {
     "accountNumber": 12,
@@ -269,6 +325,18 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "createDt": "2023-02-02"
   }
   ```
+
+2.24. Allez à : **Endpoint** : `GET /myAccount/12`  
+2.25. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+2.26. Allez à : **Endpoint** : `GET /myAccount/22`  
+2.27. Vérifiez le paramètre ==> `"accountType": ".........."`   
+2.28. Modifiez le compte avec : **Endpoint** : `PUT /update/22`
+
+Voici le JSON à copier-coller pour modifier le compte 22 :
+
   ```json
   {
     "accountNumber": 22,
@@ -279,7 +347,19 @@ Voici les JSON à copier-coller pour modifier les comptes :
   }
   ```
 
-- **Client 3 :**
+2.29. Allez à : **Endpoint** : `GET /myAccount/22`  
+2.30. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+#### **Client 3 :**
+
+2.31. Allez à : **Endpoint** : `GET /myAccount/3`  
+2.32. Vérifiez le paramètre ==> `"accountType": ".........."`   
+2.33. Modifiez le compte avec : **Endpoint** : `PUT /update/3`
+
+Voici le JSON à copier-coller pour modifier le compte 3 :
+
   ```json
   {
     "accountNumber": 3,
@@ -289,6 +369,18 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "createDt": "2023-02-03"
   }
   ```
+
+2.34. Allez à : **Endpoint** : `GET /myAccount/3`  
+2.35. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+2.36. Allez à : **Endpoint** : `GET /myAccount/13`  
+2.37. Vérifiez le paramètre ==> `"accountType": ".........."`   
+2.38. Modifiez le compte avec : **Endpoint** : `PUT /update/13`
+
+Voici le JSON à copier-coller pour modifier le compte 13 :
+
   ```json
   {
     "accountNumber": 13,
@@ -298,6 +390,18 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "createDt": "2023-02-03"
   }
   ```
+
+2.39. Allez à : **Endpoint** : `GET /myAccount/13`  
+2.40. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+2.41. Allez à : **Endpoint** : `GET /myAccount/23`  
+2.42. Vérifiez le paramètre ==> `"accountType": ".........."`  
+2.43. Modifiez le compte avec : **Endpoint** : `PUT /update/23`
+
+Voici le JSON à copier-coller pour modifier le compte 23 :
+
   ```json
   {
     "accountNumber": 23,
@@ -308,7 +412,19 @@ Voici les JSON à copier-coller pour modifier les comptes :
   }
   ```
 
-- **Client 4 :**
+2.44. Allez à : **Endpoint** : `GET /myAccount/23`  
+2.45. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+#### **Client 4 :**
+
+2.46. Allez à : **Endpoint** : `GET /myAccount/4`  
+2.47. Vérifiez le paramètre ==> `"accountType": ".........."`  
+2.48. Modifiez le compte avec : **Endpoint** : `PUT /update/4`
+
+Voici le JSON à copier-coller pour modifier le compte 4 :
+
   ```json
   {
     "accountNumber": 4,
@@ -318,6 +434,18 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "createDt": "2023-02-04"
   }
   ```
+
+2.49. Allez à : **Endpoint** : `GET /myAccount/4`  
+2.50. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+2.51. Allez à : **Endpoint** : `GET /myAccount/14`  
+2.52. Vérifiez le paramètre ==> `"accountType": ".........."`   
+2.53. Modifiez le compte avec : **Endpoint** : `PUT /update/14`
+
+Voici le JSON à copier-coller pour modifier le compte 14 :
+
   ```json
   {
     "accountNumber": 14,
@@ -327,17 +455,32 @@ Voici les JSON à copier-coller pour modifier les comptes :
     "createDt": "2023-02-04"
   }
   ```
+
+2.54. Allez à : **Endpoint** : `GET /myAccount/14`  
+2.55. Vérifiez le paramètre ==> `"accountType": ".........."`  
+
+---
+
+2.56. Allez à : **Endpoint** : `GET /myAccount/24`
+
+  
+2.57. Vérifiez le paramètre ==> `"accountType": ".........."`   
+2.58. Modifiez le compte avec : **Endpoint** : `PUT /update/24`
+
+Voici le JSON à copier-coller pour modifier le compte 24 :
+
   ```json
   {
     "accountNumber": 24,
     "customerId": 4,
     "accountType": "Current",
     "branchAddress": "987 Birch Rd",
-    "createDt": "2023-02-
-
-04"
+    "createDt": "2023-02-04"
   }
   ```
+
+2.59. Allez à : **Endpoint** : `GET /myAccount/24`  
+2.60. Vérifiez le paramètre ==> `"accountType": ".........."`  
 
 ---
 
