--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
@@ -24,7 +24,7 @@ Dans cette section, vous allez tester l'application Spring Boot en utilisant des
 
 ---
 
-### 1️⃣ Insertion des Comptes via HTTP (POST) ➕
+# 1️⃣ Insertion des Comptes via HTTP (POST) ➕
 
 Après avoir supprimé tous les comptes, vous pouvez commencer à créer de nouveaux comptes associés via des requêtes POST.
 
@@ -210,7 +210,7 @@ Voici les JSON à copier-coller pour créer les comptes :
 ---
 
 
-### 2️⃣ Modifications des Comptes via HTTP (PUT) ✏️
+# 2️⃣ Modifications des Comptes via HTTP (PUT) ✏️
 
 ---
 
