--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06.md
@@ -484,7 +484,7 @@ Voici le JSON à copier-coller pour modifier le compte 24 :
 
 ---
 
-### 3️⃣ Suppression des Comptes via HTTP (DELETE) 🚮
+# 3️⃣ Suppression des Comptes via HTTP (DELETE) 🚮
 
 Enfin, vous pouvez supprimer les comptes en utilisant des requêtes DELETE.
 
@@ -492,7 +492,177 @@ Enfin, vous pouvez supprimer les comptes en utilisant des requêtes DELETE.
 - **Endpoint** : `DELETE /deleteAccount/{id}`
 - **Action** : Cliquez sur cette opération pour l'ouvrir. Cliquez sur **`Try it out`**. Dans la section **Parameters**, entrez l'ID du compte à supprimer (par exemple, `1` pour le compte avec accountNumber 1). Cliquez sur **`Execute`** pour envoyer la requête.
 
-Voici les URLs à utiliser pour supprimer chaque compte :
+Je vous propose les étapes pour chaque compte à supprimer, incluant les vérifications avant et après la suppression :
+
+---
+
+### **Client 1 :**
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/1`
+  - Vérifiez que le compte avec l'`accountNumber` 1 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 1 : `http://localhost:8080/deleteAccount/1`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/1`
+  - Vérifiez que le compte avec l'`accountNumber` 1 n'est plus disponible.
+
+---
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/11`
+  - Vérifiez que le compte avec l'`accountNumber` 11 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 11 : `http://localhost:8080/deleteAccount/11`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/11`
+  - Vérifiez que le compte avec l'`accountNumber` 11 n'est plus disponible.
+
+---
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/21`
+  - Vérifiez que le compte avec l'`accountNumber` 21 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 21 : `http://localhost:8080/deleteAccount/21`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/21`
+  - Vérifiez que le compte avec l'`accountNumber` 21 n'est plus disponible.
+
+---
+
+### **Client 2 :**
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/2`
+  - Vérifiez que le compte avec l'`accountNumber` 2 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 2 : `http://localhost:8080/deleteAccount/2`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/2`
+  - Vérifiez que le compte avec l'`accountNumber` 2 n'est plus disponible.
+
+---
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/12`
+  - Vérifiez que le compte avec l'`accountNumber` 12 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 12 : `http://localhost:8080/deleteAccount/12`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/12`
+  - Vérifiez que le compte avec l'`accountNumber` 12 n'est plus disponible.
+
+---
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/22`
+  - Vérifiez que le compte avec l'`accountNumber` 22 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 22 : `http://localhost:8080/deleteAccount/22`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/22`
+  - Vérifiez que le compte avec l'`accountNumber` 22 n'est plus disponible.
+
+---
+
+### **Client 3 :**
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/3`
+  - Vérifiez que le compte avec l'`accountNumber` 3 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 3 : `http://localhost:8080/deleteAccount/3`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/3`
+  - Vérifiez que le compte avec l'`accountNumber` 3 n'est plus disponible.
+
+---
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/13`
+  - Vérifiez que le compte avec l'`accountNumber` 13 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 13 : `http://localhost:8080/deleteAccount/13`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/13`
+  - Vérifiez que le compte avec l'`accountNumber` 13 n'est plus disponible.
+
+---
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/23`
+  - Vérifiez que le compte avec l'`accountNumber` 23 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 23 : `http://localhost:8080/deleteAccount/23`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/23`
+  - Vérifiez que le compte avec l'`accountNumber` 23 n'est plus disponible.
+
+---
+
+### **Client 4 :**
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/4`
+  - Vérifiez que le compte avec l'`accountNumber` 4 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 4 : `http://localhost:8080/deleteAccount/4`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/4`
+  - Vérifiez que le compte avec l'`accountNumber` 4 n'est plus disponible.
+
+---
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/14`
+  - Vérifiez que le compte avec l'`accountNumber` 14 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 14 : `http://localhost:8080/deleteAccount/14`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/14`
+  - Vérifiez que le compte avec l'`accountNumber` 14 n'est plus disponible.
+
+---
+
+- **Vérification avant suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/24`
+  - Vérifiez que le compte avec l'`accountNumber` 24 est disponible.
+
+- **Suppression** :
+  - Supprimer Compte 24 : `http://localhost:8080/deleteAccount/24`
+
+- **Vérification après suppression** :
+  - Allez à : **Endpoint** : `GET /myAccount/24`
+  - Vérifiez que le compte avec l'`accountNumber` 24 n'est plus disponible.
+
+
+
+---
+# Résumé de la suppression :
+---
 
 - **Client 1 :**
   - Supprimer Compte 1 : `http://localhost:8080/deleteAccount/1`
