--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/07.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/07.md
@@ -1,4 +1,6 @@
-J'ai ajouté les annotations nécessaires pour définir la relation `OneToMany` et `ManyToOne` entre les classes `Customer` et `Accounts`. Voici le code mis à jour :
+J'ai ajouté les annotations nécessaires pour définir la relation `OneToMany` et `ManyToOne` entre les classes `Customer` et `Accounts`. 
+
+# Code mis-à-jour
 
 ### 1. `Accounts.java`
 ```java
