--- a/01-spring-boot-backend/03-Projet 3 - Projet Account/06-1.md
+++ b/01-spring-boot-backend/03-Projet 3 - Projet Account/06-1.md
@@ -1,4 +1,4 @@
-# 🏁 Partie : Tests avec JSON
+# 🏁 Partie 06 : Tests avec JSON et SWAGGER - partie 1
 
 Dans cette section, vous allez tester l'application Spring Boot en utilisant des requêtes HTTP pour gérer les comptes associés aux clients. Vous utiliserez Swagger pour envoyer des requêtes POST, GET, PUT, et DELETE.
 
