--- a/03-git/QUIZ/01-QUIZ01.md
+++ b/03-git/QUIZ/01-QUIZ01.md
@@ -1,3 +1,4 @@
+# QUIZ 1 (15 QUESTIONS)
 
 ### 1. **Quelle commande utiliseriez-vous pour basculer vers une autre branche ?**
    - A. `git switch [nom-de-branche]`
