Update and rename 03.md to 01.Architecture en Couches dans Spring Boot avec Exemples de Code et Intégration.md

--- a/00-theorie/draft/01.Architecture en Couches dans Spring Boot avec Exemples de Code et Intégration.md
+++ b/00-theorie/draft/01.Architecture en Couches dans Spring Boot avec Exemples de Code et Intégration.md
@@ -1,6 +1,6 @@
-# Cours Complet sur l'Architecture en Couches dans Spring Boot avec Exemples de Code et Intégration
+# Architecture en Couches dans Spring Boot avec Exemples de Code et Intégration
 
-#### Table des Matières
+# Table des Matières
 
 1. **Introduction à l'Architecture en Couches**
    - Pourquoi utiliser une architecture en couches ?
